Added mobile support

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="head">
         <div id="title">
-            <h3>Just a placeholder</h3>
+            <h3>Find all doubles</h3>
         </div>
     </div>
     <div class="body">
