User can select category

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="head">
-        <p>Settings</p>
+        <p onclick="showModal(false, true)">Settings</p>
         <h3 id="title">Find all doubles</h3>
         <p onclick="showModal(true)">Help</p>
     </div>
