Cleaned up code

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="head">
         <p onclick="showModal(false, true)">Settings</p>
-        <h3 id="title">Find all doubles</h3>
-        <p onclick="showModal(true)">Help</p>
+        <div id="title"><h3>Find all doubles</h3></div>
+        <p onclick="handleHelp()">Help</p>
     </div>
     <div class="body">
         <div id="activity"></div>
