Testing custom images

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     <dialog class="modal" id="modal">
         <div id="modal_content"></div>
     </dialog>
+    <hr>
+    <input type="file" id="fileInput" multiple>
+    <button onclick="addCustomImages()">Replace Images</button>
+    <!-- <form id="imageForm">
+        <input type="text" name="customImages" id="customImages">
+        <button type="submit">Import</button>
+    </form> -->
     <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
