Added favicon and meta tags

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index,follow" />
+    <meta property="og:image" content="https://tmdstudios.files.wordpress.com/2024/03/matchinggame.png" />
+    <meta property="og:title" content="Matching Game">
+    <meta name="description" property="og:description" content="A simple matching game with the option to use custom images.">
+    <meta name="twitter:card" value="summary">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="media/favicon.ico?" type="image/x-icon" />
+    <title>Matching Game</title>
 </head>
 <body>
     <div class="head">
